@@ -24,6 +24,7 @@
            <tr><td>oracle</td><td>Oracle 7 and Oracle 8</td></tr>
            <tr><td>sybase</td><td>Sybase 11</td></tr>
            <tr><td>sql-server</td><td>Microsoft SQL Server</td></tr>
+           <tr><td>db2</td><td>DB/2</td></tr>
            <tr><td>postgresql</td><td>PostgreSQL 6.5 and 7</td></tr>
          </table></p>
 
@@ -61,7 +62,7 @@
       <p>For example, to configure an Oracle 8 thin driver, use:
          <pre><![CDATA[
   <driver class-name="oracle.jdbc.driver.OracleDriver"
-          url="jdbc:oracle:thin:@machine:port:SID">
+          url="jdbc:oracle:thin:@host:port:SID">
     <param name="user" value="scott" />
     <param name="password" value="tiger" />
   </driver>]]>
@@ -80,8 +81,8 @@
       <p>For example, to configure a PostgreSQL 7.0 DataSource, use:
          <pre><![CDATA[
   <data-source class-name="org.postgresql.PostgresqlDataSource">
-    <param host="machine" database="db"
-           user="arkin" password="secret" />
+    <param host="host" database="db"
+           user="user" password="secret" />
   </data-source>]]>
          </pre></p>
 
@@ -108,7 +109,7 @@
          <pre><![CDATA[
   <database name="ebiz" engine="oracle">
     <driver class-name="oracle.jdbc.driver.OracleDriver"
-            url="jdbc:oracle:thin:@oracle.exoffice.com::ebiz?user=any">
+            url="jdbc:oracle:thin:@machine:post:SID?user=scott">
       <param name="password" value="tiger" />
     </driver>
     <mapping href="products.xml" />
@@ -121,10 +122,55 @@
          J2EE application server and a single mapping file:
          <pre><![CDATA[
   <database name="ebiz" engine="oracle">
-    <jndi name="java:comp/env/jdbc/ebiz" />
+    <jndi name="java:comp/env/jdbc/mydb" />
     <mapping href="ebiz.xml" />
   </database>]]>
          </pre></p>
+
+    </section>
+
+
+    <section title="Configuration For Various Databases">
+
+      <table border="1" cellpadding="4">
+        <tr>
+          <td><b>Driver</b></td>
+          <td><b>Configuration</b></td>
+        </tr>
+        <tr>
+          <td valign="top">Sybase jConnect</td>
+          <td valign="top"><pre><![CDATA[
+  <data-source class-name="com.sybase.jdbc2.jdbc.SybDataSource">
+    <params user="user" password="secret"
+            port-number="4100" server-name="host" />
+  </data-source>]]></pre></td>
+        </tr>
+        <tr>
+          <td valign="top">JDBC-ODBC (Access, SQL Server)</td>
+          <td valign="top"><pre><![CDATA[
+  <driver class-name="sun.jdbc.odbc.JdbcOdbcDriver" 
+          url="jdbc:odbc:db">
+    <param name="user" value="user"/>
+    <param name="password" value="secret"/>
+  </driver>]]></pre></td>
+        </tr>
+        <tr>
+          <td valign="top">Oracle Thin Driver</td>
+          <td valign="top"><pre><![CDATA[
+  <driver class-name="oracle.jdbc.driver.OracleDriver"
+          url="jdbc:oracle:thin:@host:post:SID?user=scott">
+    <param name="password" value="tiger" />
+  </driver>]]></pre></td>
+        </tr>
+        <tr>
+          <td valign="top">PostgreSQL</td>
+          <td valign="top"><pre><![CDATA[
+  <data-source class-name="org.postgresql.PostgresqlDataSource">
+    <param host="host" database="db"
+           user="user" password="secret" />
+  </data-source>]]></pre></td>
+        </tr>
+       </table>
 
     </section>
 
