@@ -30,7 +30,7 @@
              <td align="center">X</td>
            </tr>
            <tr>
-             <td>obj = results.nextElement();</td>
+             <td>obj = results.next();</td>
              <td align="center">X</td>
              <td align="center">X</td>
            </tr>
